Address carlos PR comments
